# kawai-focus

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  timer.db
json/: errors.json
kawai_focus/: main.py  menu_app.py  schemas.py  settings.py  utils.py
kawai_focus/custom_widgets/: timer_wigets.py
kawai_focus/database/: cruds.py  decor_erors.py  mixins.py  models.py  seed_examples.py  session.py
kawai_focus/database/alembic/: env.py
kawai_focus/database/alembic/versions/: 2025_05_06_2026-e3e6ab4aede7_migrration_timer.py
kawai_focus/screens/: timer_constructor_screen.py  timer_screen.py  timers_screen.py  validators_fields.py
kawai_focus/tests/: cruds_tests.py  schemas_tests.py  timer.db  validators_tests.py
kawai_focus/tests/json/: timer.json
kawai_focus/utils/: data_json.py  errors.py  utils.py  validators.py
kv/: navigation_panel.kv  timer_constructor_screen.kv  timer_screen.kv  timers_screen.kv
