[project]
name = "kawai-focus"
version = "0.1.0"
description = "Kawai.Focus - приложение для фокусировки внимания на основе таймера Pomodoro."
authors = [
    {name = "Arduinum",email = "message.chaos628@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kivy (>=2.3.1,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "typing-extensions (>=4.13.2,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kawai-focus = "kawai_focus.main:main"