[project]
name = "kawai-focus"
version = "0.1.0"
description = "Kawai.Focus - приложение для фокусировки внимания на основе таймера Pomodoro."
authors = [
    {name = "Arduinum",email = "message.chaos628@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "kivy (>=2.3.1,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "typing-extensions (>=4.13.2,<5.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "ruff (>=0.11.8,<0.12.0)",
    "kivymd @ https://github.com/kivymd/KivyMD/archive/master.zip",
    "faker (>=37.6.0,<38.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kawai-focus = "kawai_focus.main:main"